// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test of component of Home Home component initial dispatches the \`cardsPhotosRequestAction()\` method it receives from props 1`] = `
<div
  className="App"
>
  <Search
    onChangeInputValue={[Function]}
    onSearchInputValue={[Function]}
    queryText="wallpapers"
  />
  <ul
    className="nav-top"
  />
  <ul
    className="photo-list"
  />
  <div
    className="cards__text-empty"
  >
    <Memo()
      smallErrorFlag={false}
      text="No images were found for your request. Try to find more."
    />
  </div>
  <div
    className="pagination"
  />
</div>
`;

exports[`Test of component of Home Home component initial dispatches the \`getPaginationChange()\` method it receives from props 1`] = `
<div
  className="App"
>
  <Search
    onChangeInputValue={[Function]}
    onSearchInputValue={[Function]}
    queryText="wallpapers"
  />
  <ul
    className="nav-top"
  />
  <ul
    className="photo-list"
  />
  <div
    className="cards__text-empty"
  >
    <Memo()
      smallErrorFlag={false}
      text="No images were found for your request. Try to find more."
    />
  </div>
  <div
    className="pagination"
  />
</div>
`;

exports[`Test of component of Home Home component initial renders with error 1`] = `
<div
  className="error-text"
>
  Error loading photolisting
</div>
`;

exports[`Test of component of Home Home component initial renders with initial props 1`] = `
<div
  className="App"
>
  <Search
    onChangeInputValue={[Function]}
    onSearchInputValue={[Function]}
    queryText="wallpapers"
  />
  <ul
    className="nav-top"
  />
  <ul
    className="photo-list"
  />
  <div
    className="cards__text-empty"
  >
    <Memo()
      smallErrorFlag={false}
      text="No images were found for your request. Try to find more."
    />
  </div>
  <div
    className="pagination"
  />
</div>
`;

exports[`Test of component of Home Home component initial renders with loading 1`] = `
<div
  className="App"
>
  <Memo()
    className="spinner"
  />
  <Search
    onChangeInputValue={[Function]}
    onSearchInputValue={[Function]}
    queryText="wallpapers"
  />
  <ul
    className="nav-top"
  />
  <div
    className="cards__text-empty"
  >
    <Memo()
      smallErrorFlag={false}
      text="No images were found for your request. Try to find more."
    />
  </div>
  <div
    className="pagination"
  />
</div>
`;

exports[`Test of component of Home Home component with content renders with cards 1`] = `
<div
  className="App"
>
  <Search
    onChangeInputValue={[Function]}
    onSearchInputValue={[Function]}
    queryText="wallpapers"
  />
  <ul
    className="nav-top"
  />
  <ul
    className="photo-list"
  >
    <li
      className="photo-list__item"
      key="kdGstD3te3M"
    >
      <Memo()
        onSearchTagValue={[Function]}
        photoDesc={null}
        photoID="kdGstD3te3M"
        photoName="https://images.unsplash.com/photo-1558981408-db0ecd8a1ee4?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjQzODA4fQ"
        tags={Array []}
        title="Harley-Davidson"
        userAvatar="https://images.unsplash.com/profile-1556751276456-1561737ea797?ixlib=rb-1.2.1&q=80&fm=jpg&crop=faces&cs=tinysrgb&fit=crop&h=128&w=128"
        userID="harleydavidson"
      />
    </li>
  </ul>
  <div
    className="cards__text-empty"
  >
    <Memo()
      smallErrorFlag={false}
      text="No images were found for your request. Try to find more."
    />
  </div>
  <div
    className="pagination"
  />
</div>
`;
